deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: webserver
    name: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
      name: webserver
  template:
    metadata:
      labels:
        app: webserver
        name: webserver
    spec:
      serviceAccountName: test
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
