service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: test1
spec:
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
