route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: service
  namespace: test1
spec:
  host: service-test1.apps.sno-okd.lab.kuberox.net
  to:
    kind: Service
    name: service
    weight: 100
  port:
    targetPort: 9376
  wildcardPolicy: None
